--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-
-
-
     <!--NavBar-->
     <header>
       <div class="logo">Dahis Web-Agency logo placeholder</div>
@@ -31,32 +35,94 @@
       </nav>
     </header>
 
-      <!--Typewriter Animation Bienvenue -->
-      <section class="writer-container">
-        <h1>Bienvenue sur Dahis Web Agency.</h1>
-        <p>
-          <!--Bienvenue sur <strong>Dahis Web Agency</strong>-->
-          Votre développeur dédié pour des sites web personnalisés.
-        </p>
-      </section>
+    <!--Typewriter Animation Bienvenue -->
+    <section class="writer-container">
+      <h1>Bienvenue sur Dahis Web Agency.</h1>
+      <p>Votre développeur dédié pour des sites web personnalisés.</p>
+    </section>
 
+    <section class="container-home">
+      <div class="section-title">
+        Transformez vos idées<br />
+        en expériences numériques<br />
+        personnalisées sur mesure.
+      </div>
+      <div class="section-subtext">
+        une expertise approfondie en développement full-stack, je mets mon
+        expérience au service de la création de sites web attrayants,
+        fonctionnels et optimisés pour les moteurs de recherche.<br />
+        Mon objectif est de vous aider à atteindre vos objectifs en ligne en
+        fournissant des solutions web de haute qualité.
+      </div>
+      <img
+        class="img-mockup"
+        src="/images/mockup-responsive.png"
+        alt="UI/UX Responsive Design"
+      />
+    </section>
 
-      <section class="container-home">
-        <div class="section-title">Transformez vos idées<br> en expériences numériques<br> personnalisées sur mesure.</div>
-        <div class="section-subtext">une expertise approfondie en développement full-stack, je mets mon
-          expérience au service de la création de sites web attrayants,
-          fonctionnels et optimisés pour les moteurs de recherche.<br> Mon objectif
-          est de vous aider à atteindre vos objectifs en ligne en fournissant
-          des solutions web de haute qualité.</div>
-        <img class="img-mockup" src="/images/mockup-responsive.png" alt="">
-      </section>
+    <!-- Services section -->
 
+    <section id="services">
+      <h2>
+        Confiez votre projet à mes services polyvalents<br />
+        pour un accompagnement sur mesure.
+      </h2>
 
-      <!-- Services section -->
+      <!-- Services Details -->
 
-      <section>
+      <div class="services-title">Création de site web.</div>
+      <div class="services-subtext">
+        Confiez la création de votre site web sur mesure à un développeur web
+        freelance passionné. Avec une attention méticuleuse aux détails, je mets
+        en œuvre vos idées et vos objectifs pour concevoir un site web unique et
+        percutant. Que vous souhaitiez un site vitrine élégant, un site
+        e-commerce puissant ou une plateforme complexe, je possède l'expertise
+        nécessaire pour réaliser votre vision.
+      </div>
+      <div class="card-container">
+        <img
+          class="img-mockup"
+          src="/images/creationWeb.png"
+          alt="Creation Front/backend de site"
+        />
+      </div>
 
-      </section>
+      <div class="services-title">Refonte de site existant.</div>
+      <div class="services-subtext">
+        Donnez une nouvelle vie à votre site web existant grâce aux services de
+        refonte proposés par un développeur web freelance. Après une analyse
+        approfondie de votre site, j'identifie les lacunes et les opportunités
+        d'amélioration, puis je le transforme en une version améliorée et
+        modernisée. Que ce soit pour une refonte visuelle, une amélioration des
+        fonctionnalités ou une optimisation des performances, je vous accompagne
+        pour renouveler votre présence en ligne de manière efficace et
+        convaincante.
+      </div>
 
+      <div class="services-title">UI/UX.</div>
+      <div class="services-subtext">
+        Profitez d'un design d'interface utilisateur (UI) attrayant et d'une
+        expérience utilisateur (UX) optimale grâce aux services d'un développeur
+        web freelance expérimenté. Je prends en compte chaque élément de votre
+        site web pour offrir une expérience utilisateur fluide et intuitive.
+        Grâce à une combinaison de recherche, de conception centrée sur
+        l'utilisateur et d'une approche esthétique, je crée des interfaces qui
+        guident les utilisateurs et améliorent leur engagement. Mon objectif est
+        de vous fournir un design moderne et fonctionnel qui renforce la
+        convivialité et la satisfaction de vos visiteurs.
+      </div>
+
+      <div class="services-title">SEO (Search Engine Optimisation).</div>
+      <div class="services-subtext">
+        Optimisez la visibilité de votre site web grâce aux compétences en
+        référencement naturel (SEO) d'un développeur web freelance. J'optimise
+        votre site pour les mots-clés pertinents, améliore la structure et la
+        qualité du contenu, et met en place des stratégies de référencement
+        avancées. Grâce à des techniques éprouvées, je vise à améliorer le
+        classement de votre site dans les résultats de recherche, à attirer un
+        trafic qualifié et à renforcer votre présence en ligne.
+      </div>
+    </section>
   </body>
 </html>
