section service & fix rooting img

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       content="width=device-width, initial-scale=1,user-scalable=no"
       name="viewport"
     />
+    <title>Dahis Web Agency</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +22,11 @@
       referrerpolicy="no-referrer"
     />
   </head>
+
+
   <body>
+
+
     <!--NavBar-->
     <header>
       <div class="logo">Dahis Web-Agency logo placeholder</div>
@@ -29,17 +34,19 @@
         <ul>
           <li><a href="#">Accueil</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
 
+
+
     <!--Typewriter Animation Bienvenue -->
-    <section class="writer-container">
+    <div class="writer-container">
       <h1>Bienvenue sur Dahis Web Agency.</h1>
-      <p>Votre développeur dédié pour des sites web personnalisés.</p>
-    </section>
+      <p>Expertise en création et optimisation de sites web.</p>
+    </div>
+
 
     <section class="container-home">
       <div class="section-title">
@@ -56,18 +63,22 @@
       </div>
       <img
         class="img-mockup"
-        src="/images/mockup-responsive.png"
+        src="./images/mockup-responsive.png"
         alt="UI/UX Responsive Design"
       />
     </section>
+
+
 
     <!-- Services section -->
 
     <section id="services">
       <h2>
-        Confiez votre projet à mes services polyvalents<br />
+        Boostez votre présence en ligne avec nos service<br />
         pour un accompagnement sur mesure.
       </h2>
+
+
 
       <!-- Services Details -->
 
@@ -83,10 +94,11 @@
       <div class="card-container">
         <img
           class="img-mockup"
-          src="/images/creationWeb.png"
+          src="./images/creationWeb.png"
           alt="Creation Front/backend de site"
         />
       </div>
+
 
       <div class="services-title">Refonte de site existant.</div>
       <div class="services-subtext">
@@ -100,6 +112,7 @@
         convaincante.
       </div>
 
+
       <div class="services-title">UI/UX.</div>
       <div class="services-subtext">
         Profitez d'un design d'interface utilisateur (UI) attrayant et d'une
@@ -112,6 +125,7 @@
         de vous fournir un design moderne et fonctionnel qui renforce la
         convivialité et la satisfaction de vos visiteurs.
       </div>
+
 
       <div class="services-title">SEO (Search Engine Optimisation).</div>
       <div class="services-subtext">
