About me Section w/ placeholder text

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
 
     <!--NavBar-->
     <header>
-      <div class="logo">Dahis Web-Agency logo placeholder</div>
+      <div class="logo">Dahis.dev</div>
       <nav>
         <ul>
           <li><a href="#">Accueil</a></li>
+          <li><a href="#about-me">A propos de moi</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -47,6 +48,37 @@
       <p>Expertise en création et optimisation de sites web.</p>
     </div>
 
+
+    
+    <!--About me Section-->
+    <div id="about-me">
+      <div class="about-me_card_container">
+        <div class="card-wrapper">
+          <img 
+            class="about-me_card_container_img"
+            src="./images/IMG_20230504_153447.jpg" 
+          />
+        </div>
+          <div class="about-me_container_text">
+            <h3>Expert Frontend Full Stack en France : Création d'expériences utilisateur exceptionnelles</h3>
+            <span class="about-me_text">
+              En tant que développeur web frontend, je suis expert dans les technologies essentielles telles que HTML, CSS et JavaScript, qui me permettent de créer des interfaces utilisateur dynamiques et interactives.
+              J'ai également une maîtrise avancée de React, qui me permet de développer des applications web modernes et performantes. Je suis compétent dans l'utilisation de frameworks comme Tailwind et Sass, ce qui me permet de créer des designs responsives et attrayants. Mon expérience en backend avec Node.js me permet de construire des interfaces avec un code propre en suivant les meilleures pratiques, offrant ainsi à mes utilisateurs une expérience agréable.
+            </span>
+          </div>
+      </div>
+      <div class="tech-stack_wrapper">
+        <span>Tech Stacks</span>
+        <div class="tech-stack">
+          <i class="fa-brands fa-html5" style="color: #ff0000;"></i>
+          <i class="fa-brands fa-css3-alt" style="color: #0080ff;"></i>
+          <i class="fa-brands fa-square-js" style="color: #ffff80;"></i>
+          <i class="fa-brands fa-react" style="color: #00ffff;"></i>
+          <i class="fa-brands fa-sass" style="color: #ff00ff;"></i>
+          <i class="fa-brands fa-node-js" style="color: #008000;"></i>
+        </div>
+      </div>
+    </div>
 
     <section class="container-home">
       <div class="section-title">
@@ -125,7 +157,6 @@
         de vous fournir un design moderne et fonctionnel qui renforce la
         convivialité et la satisfaction de vos visiteurs.
       </div>
-
 
       <div class="services-title">SEO (Search Engine Optimisation).</div>
       <div class="services-subtext">
